added new illustration and scroll animaiton

--- a/index.html
+++ b/index.html
@@ -177,11 +177,7 @@
             <p>The first night went by. I slept extremely well. We got ready and went to the dining car for an extensive
               breakfast.
               <span class="gold_text">Once again the luxury was a feast for the eyes.</span></p>
-          </div>
-          <div class="items__two">
-            <img src="./assets/item__one.png" alt="">
-            <img src="./assets/item__two.png" alt="">
-            <img src="./assets/item__three.png" alt="">
+            <img src="./assets/dinner.png" alt="">
           </div>
         </div>
         <div class="items__three">
@@ -243,9 +239,9 @@
               <img class="text__detail text__detail--louise" src="./assets/detail_one.svg" alt="">
               <h3>The train attendant collected all documents when we set off.<br><br>Can you find the right document?</h3>
               <div>
-                <img class="document--image document--image--wrong_one" src="./assets/logo_one_na.png" alt="">
-                <img class="document--image document--image--right" src="./assets/logo_two_na.png" alt="">
-                <img class="document--image document--image--wrong_two" src="./assets/logo_three_na.png" alt="">
+                <img class="document--image document--image--wrong_one" src="./assets/book_one.png" alt="">
+                <img class="document--image document--image--right" src="./assets/book_two.png" alt="">
+                <img class="document--image document--image--wrong_two" src="./assets/book_three.png" alt="">
               </div>
               <p class="document__feedback">Maybe it's your lucky day!</p>
               <img class="text__detail" src="./assets/detail_one.svg" alt="">
@@ -255,18 +251,36 @@
           <p>That meant they didn't need to wake us when we passed through customs at a border.</p>
           <img class="text__detail text__detail--documents" src="./assets/detail_three.svg" alt="">
         </div>
-
-
+      </div>
+      <div class="landscape">
+        <div class="landscape__animation">
+          <img class="landscape__animation--train" src="./assets/view_window.png" alt="">
+        </div>
+        <div class="landscape__info">
+          <p>It was exciting to watch the changing landscape. The further we went, the more exotic the surroundings became.</p>
+          <img class="text__detail text__detail--documents" src="./assets/detail_three.svg" alt="">
+        </div>
+        <div class="arrival">
+          <div class="arrival__text">
+            <p>Part of the Simplon Orient Express travelled to Athens. Where they switched some carriages. This gave us some time to
+              admire the <span class="blue_text">magical views in Belgrade.</span></p>
+          </div>
+          <img class="arrival__image" src="./assets/illustration_arrival.png" alt="">
+        </div>
       </div>
     </section>
     <section>
       <div id="chapter__three" class="chapter chapter__three">
-        <p>A bridge between East and West</p>
+        <h2>A bridge between East and West</p>
       </div>
-      <p>At last we arrived at the Simplon Orient Express train's final destination: Sirkeci station in Istanbul. Talk about
-      exotic! This stunning station was built in 1890 by the German architect August Jachmund especially for the Orient
-      Express. It was a magical blend of elements from east and west.</p>
-
+        <div>
+          <p>At last we arrived at the Simplon Orient Express train's final destination: Sirkeci station in Istanbul. Talk about
+            exotic! This stunning station was built in 1890 by the German architect August Jachmund especially for the Orient
+            Express. It was a magical blend of elements from east and west.</p>
+            <img src="./assets/book_three.png" alt="">
+        </div>
+      
+        
       <p>The Taurus Express first took us to Tripoli in Lebanon. Rolls Royce buses drove us on to Haifa, Palestine. Then we got
       back on the train to Kantara on the Suez Canal, where we boarded a ferry. One last train brought us to Cairo. So the
       whole journey from Paris to our final destination took 4 trains, 2 ships, one bus and 6 days. This day and age that
@@ -274,7 +288,7 @@
     </section>
     <section>
       <div id="chapter__four" class="chapter chapter__four">
-        <p>I could have met Agatha Christie!</p>
+        <h2>I could have met Agatha Christie!</h2>
       </div>
       <p>The reason why I was so terrified beforehand was because I'd heard the story of the stranded Orient Express. That
       particular train got stuck 130 kilometres from Istanbul in a heavy snowstorm. The train remained there for 5 days, until
