added illustrations for dishes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="train_info">
         <div class="train_info--intro">
           <p>
-            It was busy on the platform, but that was quite alright. Even the most imaginative among you would not believe what was going on there. Such a varied range of people!
+            It was busy on the platform, but that was quite alright. Even the most imaginative among you would not believe what was going on there. <span class="gold_text">Such a varied range of people!</span>
           </p>
         </div>
         <div class="cards-container">
@@ -191,32 +191,32 @@
         <div class="dishes--menu">
           <li class="dish dish_one">
             <p class="dish__title">consommé Xavier</p>
-            <img src="./assets/dish_one_na.png" alt="">
+            <img src="./assets/dish_one.png" alt="">
             <p>A clear soup served with garnishes, showcasing rich flavors and meticulous preparation.</p>
           </li>
           <li class="dish dish_two">
             <p class="dish__title">saumon en Bellevue</p>
-            <img src="./assets/dish_two_na.png" alt="">
+            <img src="./assets/dish_two.png" alt="">
             <p>Salmon presented in the Bellevue style, featuring a chilled presentation that highlights the delicate taste of the fish.</p>
           </li>
           <li class="dish dish_three">
             <p class="dish__title">Cuissot de veau Ecarlate</p>
-            <img src="./assets/dish_two_na.png" alt="">
+            <img src="./assets/dish_three.png" alt="">
             <p>Slow-cooked veal shank, 'Ecarlate' style, offering tender meat with a flavorful and aromatic profile.</p>
           </li>
           <li class="dish dish_four">
             <p class="dish__title">Asperges à l'italienne</p>
-            <img src="./assets/dish_two_na.png" alt="">
+            <img src="./assets/dish_four.png" alt="">
             <p>Asparagus prepared in the Italian style, providing a delicious twist to this classic vegetable dish.</p>
           </li>
           <li class="dish dish_five">
             <p class="dish__title">Soufflé 'Alaska'</p>
-            <img src="./assets/dish_two_na.png" alt="">
+            <img src="./assets/dish_five.png" alt="">
             <p>A delectable dessert, the Alaska soufflé, combining light and airy textures with a touch of sweetness.</p>
           </li>
           <li class="dish dish_six">
             <p class="dish__title">Corbeille de fruits</p>
-            <img src="./assets/dish_two_na.png" alt="">
+            <img src="./assets/dish_six.png" alt="">
             <p>A refreshing fruit basket, showcasing a variety of fresh and seasonal fruits for a delightful and healthy conclusion to
             the meal.</p>
           </li>
@@ -273,31 +273,40 @@
       <div id="chapter__three" class="chapter chapter__three">
         <h2>A bridge between East and West</p>
       </div>
-        <div>
-          <p>At last we arrived at the Simplon Orient Express train's final destination: Sirkeci station in Istanbul. Talk about
-            exotic! This stunning station was built in 1890 by the German architect August Jachmund especially for the Orient
-            Express. It was a magical blend of elements from east and west.</p>
-            <img src="./assets/book_three.png" alt="">
-        </div>
-      
-        
-      <p>The Taurus Express first took us to Tripoli in Lebanon. Rolls Royce buses drove us on to Haifa, Palestine. Then we got
-      back on the train to Kantara on the Suez Canal, where we boarded a ferry. One last train brought us to Cairo. So the
-      whole journey from Paris to our final destination took 4 trains, 2 ships, one bus and 6 days. This day and age that
-      seems unthinkable, but at the time it was really fast!</p>
+      <div class="destination">
+        <p class="destination__info destination__info--one">At last we arrived at the Simplon Orient Express train's final destination: Sirkeci station in Istanbul.Talk about
+          exotic! 
+        </p>
+          <img class="destination__image" src="./assets/illustration_station.png" alt="">
+        <p>
+        This stunning station was built in 1890 by the German architect August Jachmund especially for the Orient
+          Express. It was a magical blend of elements from east and west.
+        </p>
+        <img class="destination__image" src="./assets/illustration_since.png" alt="">
+        <p class="destination__info destination__info--two">The Taurus Express first took us to Tripoli in Lebanon. Rolls Royce buses drove us on to Haifa, Palestine. Then we
+          got
+          back on the train to Kantara on the Suez Canal, where we boarded a ferry. One last train brought us to Cairo. So the
+          whole journey from Paris to our final destination took 4 trains, 2 ships, one bus and 6 days. This day and age that
+          seems unthinkable, but at the time it was really fast!
+        </p>
+      </div>
     </section>
     <section>
       <div id="chapter__four" class="chapter chapter__four">
         <h2>I could have met Agatha Christie!</h2>
       </div>
-      <p>The reason why I was so terrified beforehand was because I'd heard the story of the stranded Orient Express. That
-      particular train got stuck 130 kilometres from Istanbul in a heavy snowstorm. The train remained there for 5 days, until
-      a snow clearance team turned up. In the meantime temperatures inside had reached -10°C! That story incidentally was the
-      inspiration for Agatha Christie's novel “Murder on the Orient Express” a few years later. Did you know that she
-      travelled for the first time on the Orient Express in the same year as me? With a bit of luck I might even have met her!</p>
-
-      <p>In any case, I will always remember that journey as the greatest adventure of my life. I can still picture every minute
-      as if it were a film. I had the time of my life aboard the Simplon Orient Express.</p>
+      <div class="meeting">
+        <p class="meeting__info meeting__info--one">The reason why I was so terrified beforehand was because I'd heard the story of the stranded Orient Express. That
+        particular train got stuck 130 kilometres from Istanbul in a heavy snowstorm. The train remained there for 5 days, until
+        a snow clearance team turned up. In the meantime temperatures inside had reached -10°C! That story incidentally was the
+        inspiration for Agatha Christie's novel “Murder on the Orient Express” a few years later. Did you know that she
+        travelled for the first time on the Orient Express in the same year as me? With a bit of luck I might even have met her!
+        </p>
+        <img class="meeting__image" src="./assets/book_three.png" alt="">
+        <p class="meeting__info meeting__info--two">In any case, I will always remember that journey as the greatest adventure of my life. I can still picture every minute
+        as if it were a film. I had the time of my life aboard the Simplon Orient Express.
+        </p>
+      </div>
     </section>
     <section>
       <div>
