added images and illustrations

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Italianno&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
   <title>Orient Express</title>
@@ -17,7 +19,7 @@
 <body>
   <header>
     <nav>
-      <img src="./assets/logo_one.svg" alt="">
+      <img src="./assets/TW_logo.svg" alt="">
       <img src="./assets/hamburger.svg" class="hamburger"></img>
     </nav>
     <div class="links">
@@ -74,22 +76,24 @@
           <p>That year the Simplon Orient Express was at the top of it's fame.<br><br>
           Behind me I overheard two gentlemen talking enthusiastically about:</p>
         </div>
-        <img  class="convo__talker" src="./assets/illustration_personOne.png" alt="">
-        <img class="convo__detail" src="./assets/detail_two.svg" alt="">
-        <div class="convo__exchange">
-          <li class=" text text__blue"><p>Excited about the upcoming adventure on the Orient Express?</p></li>
-          <li class=" text text__red"><p>Absolutely, it has a fascinating history of luxury travel.</p></li>
-          <li class=" text text__blue"><p>Dating back to the late 19th century, those compartments hold countless stories.</p></li>
-          <li class=" text text__red"><p>From royalty to spies, the Orient Express is a rolling time capsule.</p></li>
-          <li class=" text text__blue"><p>Stepping into that bygone era will be an unforgettable experience.</p></li>
+        <div class="convo__container">
+          <img  class="convo__talker" src="./assets/illustration_personOne.png" alt="">
+          <img class="convo__detail" src="./assets/detail_two.svg" alt="">
+          <div class="convo__exchange">
+            <li class=" text text__blue"><p>Excited about the upcoming adventure on the Orient Express?</p></li>
+            <li class=" text text__red"><p>Absolutely, it has a fascinating history of luxury travel.</p></li>
+            <li class=" text text__blue"><p>Dating back to the late 19th century, those compartments hold countless stories.</p><li>
+            <li class=" text text__red"><p>From royalty to spies, the Orient Express is a rolling time capsule.</p></li>
+            <li class=" text text__blue"><p>Stepping into that bygone era will be an unforgettable experience.</p></li>
+          </div>
+          <img class="convo__detail" src="./assets/detail_two.svg" alt="">
+          <img class="convo__talker" src="./assets/illustration_personTwo.png" alt="">
         </div>
-        <img class="convo__detail" src="./assets/detail_two.svg" alt="">
-        <img class="convo__talker" src="./assets/illustration_personTwo.png" alt="">
         </div>
       </div>
     </section>
     <section>
-      <div id="chapter__one" class="chapter chapter__one" >
+      <div id="chapter__one" class="chapter chapter__one">
         <h2>on y va!</h2>
       </div>
       <div class="departure">
@@ -101,7 +105,8 @@
       <div class="train_info">
         <div class="train_info--intro">
           <p>
-            It was busy on the platform, but that was quite alright. Even the most imaginative among you would not believe what was going on there. <span class="gold_text">Such a varied range of people!</span>
+            It was busy on the platform, but that was quite alright. Even the most imaginative among you would not
+            believe what was going on there. <span class="gold_text">Such a varied range of people!</span>
           </p>
         </div>
         <div class="cards-container">
@@ -155,19 +160,22 @@
           <p class="result hide"></p>
           <img class="text__detail" src="./assets/detail_three.svg" alt="">
         </div>
-      <div class="people_info">
-        <div>
-          <p>
-            There were <span class="gold_text">diplomats</span> and <span class="gold_text">state leaders</span>, <span class="gold_text">stars</span> and <span class="gold_text">aristocrats</span>, <span class="gold_text">artists</span> and <span class="gold_text">writers</span>, even <span class="gold_text">traders</span> from the East and
-            Indian Maharajas on their way home.
-          </p>
+        <div class="people_info">
+          <div>
+            <p>
+              There were <span class="gold_text">diplomats</span> and <span class="gold_text">state leaders</span>,
+              <span class="gold_text">stars</span> and <span class="gold_text">aristocrats</span>, <span
+                class="gold_text">artists</span> and <span class="gold_text">writers</span>, even <span
+                class="gold_text">traders</span> from the East and
+              Indian Maharajas on their way home.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="world">
-        <img src="./assets/world.png" alt="">
-      </div>
+        <div class="world">
+          <img src="./assets/worldV2.png" alt="">
+        </div>
     </section>
-    <section>
+    <section class="queen">
       <div id="chapter__two" class=" chapter chapter__two">
         <h2>a meal fit for a queen</h2>
       </div>
@@ -176,17 +184,21 @@
           <div class="items__one">
             <p>The first night went by. I slept extremely well. We got ready and went to the dining car for an extensive
               breakfast.
-              <span class="gold_text">Once again the luxury was a feast for the eyes.</span></p>
+              <span class="gold_text">Once again the luxury was a feast for the eyes.</span>
+            </p>
             <img src="./assets/dinner.png" alt="">
           </div>
         </div>
         <div class="items__three">
           <img class="text__detail" src="./assets/detail_one.svg" alt="">
-          <p>Colourful carpets, white table linen, champagne buckets, crystal glasses and carafes, silver cutlery and bone china
-          plates.</p>
+          <p>Colourful carpets, white table linen, champagne buckets, crystal glasses and carafes, silver cutlery and
+            bone china
+            plates.</p>
         </div>
       </div>
       <div class="dishes--info">
+        <p class="menu">Menu</p>
+        <img class="cutlery" src="./assets/cutlery_one.png" alt="">
         <p>We had a real chef on board. In the evening he served an excellent menu:</p>
         <div class="dishes--menu">
           <li class="dish dish_one">
@@ -197,7 +209,8 @@
           <li class="dish dish_two">
             <p class="dish__title">saumon en Bellevue</p>
             <img src="./assets/dish_two.png" alt="">
-            <p>Salmon presented in the Bellevue style, featuring a chilled presentation that highlights the delicate taste of the fish.</p>
+            <p>Salmon presented in the Bellevue style, featuring a chilled presentation that highlights the delicate
+              taste of the fish.</p>
           </li>
           <li class="dish dish_three">
             <p class="dish__title">Cuissot de veau Ecarlate</p>
@@ -212,39 +225,43 @@
           <li class="dish dish_five">
             <p class="dish__title">Soufflé 'Alaska'</p>
             <img src="./assets/dish_five.png" alt="">
-            <p>A delectable dessert, the Alaska soufflé, combining light and airy textures with a touch of sweetness.</p>
+            <p>A delectable dessert, the Alaska soufflé, combining light and airy textures with a touch of sweetness.
+            </p>
           </li>
           <li class="dish dish_six">
             <p class="dish__title">Corbeille de fruits</p>
             <img src="./assets/dish_six.png" alt="">
-            <p>A refreshing fruit basket, showcasing a variety of fresh and seasonal fruits for a delightful and healthy conclusion to
-            the meal.</p>
+            <p>A refreshing fruit basket, showcasing a variety of fresh and seasonal fruits for a delightful and healthy
+              conclusion to
+              the meal.</p>
           </li>
         </div>
       </div>
       <div class="documents">
         <div class="documents__intro">
           <img class="documents__intro--image_one" src="./assets/side_decoration.svg" alt="">
-          <p>The journey from Paris to Istanbul lasted just 3 days. That was made possible by the fact that the train kept going day
-          and night.</p>
+          <p>The journey from Paris to Istanbul lasted just 3 days. That was made possible by the fact that the train
+            kept going day
+            and night.</p>
           <img class="documents__intro--image_two" src="./assets/side_decoration.svg" alt="">
         </div>
         <div class="documents__text_one">
-        <img class="text__detail text__detail--documents" src="./assets/detail_three.svg" alt="">
-        <p>I had expected it to be a tiring experience but after the first night I was pleasantly surprised at the ease and comfort
-        of the trip.</p>
-        </div>
+          <p>I had expected it to be a tiring experience but after the first night I was pleasantly surprised at the
+            <span class="blue_text">ease and comfort</span>
+            of the trip.</p>
+        </div> 
         <div class="documents__find">
           <div class="documents__find--options">
-              <img class="text__detail text__detail--louise" src="./assets/detail_one.svg" alt="">
-              <h3>The train attendant collected all documents when we set off.<br><br>Can you find the right document?</h3>
-              <div>
-                <img class="document--image document--image--wrong_one" src="./assets/book_one.png" alt="">
-                <img class="document--image document--image--right" src="./assets/book_two.png" alt="">
-                <img class="document--image document--image--wrong_two" src="./assets/book_three.png" alt="">
-              </div>
-              <p class="document__feedback">Maybe it's your lucky day!</p>
-              <img class="text__detail" src="./assets/detail_one.svg" alt="">
+            <img class="text__detail text__detail--louise" src="./assets/detail_one.svg" alt="">
+            <h3>The train attendant collected all documents when we set off.<br><br>Can you find the right document?
+            </h3>
+            <div>
+              <img class="document--image document--image--wrong_one" src="./assets/book_one.png" alt="">
+              <img class="document--image document--image--right" src="./assets/book_two.png" alt="">
+              <img class="document--image document--image--wrong_two" src="./assets/book_three.png" alt="">
+            </div>
+            <p class="document__feedback">Maybe it's your lucky day!</p>
+            <img class="text__detail" src="./assets/detail_one.svg" alt="">
           </div>
         </div>
         <div class="documents__text_two">
@@ -257,12 +274,14 @@
           <img class="landscape__animation--train" src="./assets/view_window.png" alt="">
         </div>
         <div class="landscape__info">
-          <p>It was exciting to watch the changing landscape. The further we went, the more exotic the surroundings became.</p>
+          <p>It was exciting to watch the changing landscape. The further we went, the more exotic the surroundings
+            became.</p>
           <img class="text__detail text__detail--documents" src="./assets/detail_three.svg" alt="">
         </div>
         <div class="arrival">
           <div class="arrival__text">
-            <p>Part of the Simplon Orient Express travelled to Athens. Where they switched some carriages. This gave us some time to
+            <p>Part of the Simplon Orient Express travelled to Athens. Where they switched some carriages. This gave us
+              some time to
               admire the <span class="blue_text">magical views in Belgrade.</span></p>
           </div>
           <img class="arrival__image" src="./assets/illustration_arrival.png" alt="">
@@ -274,19 +293,29 @@
         <h2>A bridge between East and West</p>
       </div>
       <div class="destination">
-        <p class="destination__info destination__info--one">At last we arrived at the Simplon Orient Express train's final destination: Sirkeci station in Istanbul.Talk about
-          exotic! 
-        </p>
-          <img class="destination__image" src="./assets/illustration_station.png" alt="">
-        <p>
-        This stunning station was built in 1890 by the German architect August Jachmund especially for the Orient
-          Express. It was a magical blend of elements from east and west.
-        </p>
-        <img class="destination__image" src="./assets/illustration_since.png" alt="">
-        <p class="destination__info destination__info--two">The Taurus Express first took us to Tripoli in Lebanon. Rolls Royce buses drove us on to Haifa, Palestine. Then we
+        <div class="destination__one">
+          <p class="destination__info destination__info--one">At last we arrived at the Simplon Orient Express train's
+            final destination: <span class="blue_text">Sirkeci station in Istanbul.</span>Talk about
+            exotic!
+          </p>
+          <img class="destination__image destination__image--one" src="./assets/illustration_station.png" alt="">
+        </div>
+        <img class="between" src="./assets/between.png" alt="">
+        <div class="destination__two">
+          <p>
+            This stunning station was built in 1890 by the German architect <span class="blue_text">August Jachmund</span> especially for the Orient
+            Express. It was a magical blend of elements from east and west.
+          </p>
+          <img class="destination__image destination__image--two" src="./assets/illustration_since.png" alt="">
+        </div>
+       
+        <p class="destination__info destination__info--two">The Taurus Express first took us to Tripoli in Lebanon.
+          Rolls Royce buses drove us on to Haifa, Palestine. Then we
           got
-          back on the train to Kantara on the Suez Canal, where we boarded a ferry. One last train brought us to Cairo. So the
-          whole journey from Paris to our final destination took 4 trains, 2 ships, one bus and 6 days. This day and age that
+          back on the train to Kantara on the Suez Canal, where we boarded a ferry. One last train brought us to Cairo.
+          So the
+          whole journey from Paris to our final destination took 4 trains, 2 ships, one bus and 6 days. This day and age
+          that
           seems unthinkable, but at the time it was really fast!
         </p>
       </div>
@@ -296,15 +325,21 @@
         <h2>I could have met Agatha Christie!</h2>
       </div>
       <div class="meeting">
-        <p class="meeting__info meeting__info--one">The reason why I was so terrified beforehand was because I'd heard the story of the stranded Orient Express. That
-        particular train got stuck 130 kilometres from Istanbul in a heavy snowstorm. The train remained there for 5 days, until
-        a snow clearance team turned up. In the meantime temperatures inside had reached -10°C! That story incidentally was the
-        inspiration for Agatha Christie's novel “Murder on the Orient Express” a few years later. Did you know that she
-        travelled for the first time on the Orient Express in the same year as me? With a bit of luck I might even have met her!
+        <p class="meeting__info meeting__info--one">The reason why I was so terrified beforehand was because I'd heard
+          the story of the stranded Orient Express. That
+          particular train got stuck 130 kilometres from Istanbul in a heavy snowstorm. The train remained there for 5
+          days, until
+          a snow clearance team turned up. In the meantime temperatures inside had reached -10°C! That story
+          incidentally was the
+          inspiration for Agatha Christie's novel “Murder on the Orient Express” a few years later. Did you know that
+          she
+          travelled for the first time on the Orient Express in the same year as me? With a bit of luck I might even
+          have met her!
         </p>
         <img class="meeting__image" src="./assets/book_three.png" alt="">
-        <p class="meeting__info meeting__info--two">In any case, I will always remember that journey as the greatest adventure of my life. I can still picture every minute
-        as if it were a film. I had the time of my life aboard the Simplon Orient Express.
+        <p class="meeting__info meeting__info--two">In any case, I will always remember that journey as the greatest
+          adventure of my life. I can still picture every minute
+          as if it were a film. I had the time of my life aboard the Simplon Orient Express.
         </p>
       </div>
     </section>
@@ -316,12 +351,54 @@
         <p>next story</p>
       </div>
     </section>
-   
+
   </main>
 
   <footer>
+    <div class="footer__one">
+      <ul>
+        <li>chapter 1</li>
+        <li>chapter 2</li>
+        <li>chapter 3</li>
+        <li>chapter 4</li>
+      </ul>
+    </div>
 
+    <div class="line"></div>
+
+    <div class="footer__two">
+
+      <div class="contact">
+        <p class="footer__title contact__title">Contact</p>
+        <div class=" contact__info">
+          <p>Princess Elisabeth square 5</p>
+          <p>1030 Schaerbeek</p>
+          <p>+32 (0)2 224 74 37</p>
+          <p>info@trainworld.be</p>
+        </div>
+      </div>
+
+      <div class="footer__info">
+        <div class="logo">
+          <img src="./assets/TW_logo.svg" alt="">
+        </div>
+        <div>
+          <a class="ticket">Tickets</a>
+        </div>
+      </div>
+
+      <div class="socials">
+        <p class="footer__title socials__title">Socials</p>
+        <div>
+          <img src="./assets/icon_facebook.svg" alt="">
+          <img src="./assets/icon_instagram.svg" alt="">
+          <img src="./assets/icon_twitter.svg" alt="">
+        </div>
+      </div>
+
+    </div>
   </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
